# closed-loop-ai-scientist-cell-culture-workcell

./: .gitignore  .pre-commit-config.yaml  PROJECT_PLAN.md  README.md  SYSTEM_ARCHITECTURE.md  literature_review.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: vnatriegens_operational_parameters.md  vnatriegens_parameter_research.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  global.d.ts
frontend/src/api/: client.ts
frontend/src/components/charts/: IterationNavChips.tsx  MetricDefinitionButton.tsx  MetricPairDefinitionButton.tsx  MetricPairOverview.tsx  MetricViolinDistribution.tsx  OdCurveChart.tsx  OptimizationMetricsSection.tsx  OptimizationProgress.tsx  OverviewMetricsSection.tsx  Plot.tsx
frontend/src/components/dashboard/: DashboardIterationFilter.tsx
frontend/src/components/feedback/: ApiErrorState.tsx  EmptyState.tsx  ErrorBoundary.tsx
frontend/src/components/layout/: AppShell.tsx  PageHeader.tsx  Sidebar.tsx  SiteMainHeader.tsx
frontend/src/components/plate/: PlateHeatmap.tsx  WellDetailPanel.tsx
frontend/src/components/ui/: tooltip.tsx
frontend/src/components/wells/: WellIdWithDesign.tsx  wellTooltipContent.tsx  wellTooltipTokens.ts
frontend/src/config/: site.ts
frontend/src/lib/: chartIterationLegend.ts  hashJitter.ts  iterationColors.ts  metricDefinitions.ts  metrics.ts  sortIterationIds.ts  wellDesign.ts
frontend/src/pages/: Compare.tsx  Dashboard.tsx  History.tsx  IterationView.tsx
frontend/src/types/: index.ts
scripts/: generate_mock_data.py
src/parser/: README.md  __main__.py  cli.py  models.py  parser.py
src/webapp/: README.md  config.py  main.py  schemas.py
src/webapp/routes/: iterations.py  wells.py
src/webapp/services/: iteration_service.py  od_data_service.py
tests/: test_parser.py  test_webapp_api.py
