[project]
name = "closed-loop-ai-scientist-cell-culture-workcell"
version = "0.1.0"
description = "Closed-loop AI scientist for cell culture growth optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/parser --cov=src/webapp --cov-report=term-missing --cov-fail-under=88"

[tool.coverage.run]
source = ["src/parser", "src/webapp"]
omit = ["src/parser/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*", "fastapi", "fastapi.*", "uvicorn", "uvicorn.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
docstring-code-format = true
